# swarm_powerbi_bot

./: .dockerignore  .env.example  .gitignore  .orchestrator.yaml  CLAUDE.md  Dockerfile  docker-compose.test.yml  docker-compose.yml  maqa-config.yml  pyproject.toml
.claude/agents/: coordinator.md  feature.md  qa.md
.claude/commands/: speckit.adversarial-review.md
.github/workflows/: ci.yml  validate-catalogs.yml
.maqa/: adversarial-findings.md  state.json
.specify/: extensions.yml  feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
catalogs/: aggregate-catalog.yaml  category-index.yaml  semantic-catalog.yaml
constitution/: constitution.md  roles.md
docs/: ORCHESTRATOR-WORKFLOW.md  test-checklist.md
scripts/: smoke_test.py
speckit/: pipeline.yaml
sql/: create_gap_aggregates.sql  create_materialized_aggregates.sql
tests/: conftest.py  test_aggregate_registry.py  test_aggregate_registry_v2.py  test_analyst_fallback.py  test_chart_adequacy.py  test_chart_preferred.py  test_chart_renderer.py  test_circuit_breaker.py  test_comparison.py  test_composer_multi.py  test_composer_regression.py  test_composition.py  test_config.py  test_context_switching.py  test_data_accuracy.py  test_data_methods.py  test_data_methods_acceptance.py  test_e2e_pipeline.py  test_field_labels.py  test_keyword_fallback.py  test_llm_client_ollama.py  test_llm_planner.py  test_master_resolver.py  test_match_month_012.py  test_multi_query.py  test_orchestrator.py  test_period_detection.py  test_period_hint.py  test_planner.py  test_planner_v2.py  test_query_logger.py  test_registration.py  test_security.py  test_stt_client.py  test_topic_registry.py
(+126 files in other folders)
