[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-powerbi-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0",
    "httpx>=0.27.0",
    "pyodbc>=5.1.0",
    "selenium>=4.22.0",
    "python-dotenv>=1.0.1",
    "matplotlib>=3.8.0",
    "pyyaml>=6.0.3",
    "jsonschema>=4.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m 'not integration'"
markers = [
    "integration: тесты с реальным MSSQL/Ollama (требуют окружение)",
    "e2e: E2E тесты с моками (запускаются всегда в CI)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
]
